fixed nav bar falling behind content

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ html{
     backdrop-filter: brightness(0.3 );
     border-radius: 25px;
     border:solid 2px #f87525;
-    margin: 15px;
+    margin-top: 50px;
 }
 
 nav{
@@ -33,7 +33,8 @@ nav{
     right: 0;
     background-color: #511B3D; 
     text-decoration: none;
-    text-transform: uppercase;   
+    text-transform: uppercase;
+    z-index: 9;  
 }
 
 li{
@@ -110,6 +111,9 @@ main{
     align-items: center;
     color: white;
     text-align: center;
+}
+
+#about_text{
     margin-bottom: 100px;
 }
 
@@ -119,6 +123,7 @@ main{
 
 .headshot {
     border-radius: 200px;
+    margin: 5px;
 }
 
 .line {
@@ -134,6 +139,6 @@ footer{
     left: 0;
     right: 0;
     background-color: #511b51;
-    border: solid 4px white;
+    border: solid 1px white;
     color: white
 }
